--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
 
         </section>
         <section id='buttonList'></section>
+        <canvas id="myChart"></canvas>
     </main>
     <footer>
 
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script src="./Js/app.js"></script>
 </body>
 </html>
