adding local storeage

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 <img id="right" src="" alt="" title=""/>
 
         </section>
+        <section id=trace>
+
+        </section>
         <section id='button'>
             
      <button  id="finalResult">finlResult</button>
